# SlicerVoxTell

./: CMakeLists.txt  LICENSE.txt  README.md
VoxTell/: CMakeLists.txt  VoxTell.py
VoxTell/Resources/UI/: VoxTell.ui
